[gd_scene load_steps=4 format=3 uid="uid://cggtcf3jif7oc"]

[ext_resource type="Script" path="res://ItemOption.gd" id="1_6gtvl"]
[ext_resource type="Texture2D" uid="uid://c0kargjttf278" path="res://Textures/Items/Weapons/sword.png" id="2_jnnu2"]
[ext_resource type="FontFile" uid="uid://eltw4hqqgcsj" path="res://Font/tenderness.otf" id="3_7ni2l"]

[node name="ItemOption" type="ColorRect"]
custom_minimum_size = Vector2(720, 200)
anchors_preset = -1
anchor_right = 0.07
anchor_bottom = 0.035
offset_right = 0.799999
offset_bottom = -0.4
size_flags_horizontal = 0
color = Color(0.54902, 0.54902, 0.54902, 1)
script = ExtResource("1_6gtvl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 104.0
offset_bottom = 104.0
color = Color(0, 0, 0, 1)

[node name="ItemIcon" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_right = 96.0
offset_bottom = 96.0
texture = ExtResource("2_jnnu2")

[node name="label_name" type="Label" parent="."]
layout_mode = 0
offset_left = 156.0
offset_top = 8.0
offset_right = 236.0
offset_bottom = 100.0
theme_override_fonts/font = ExtResource("3_7ni2l")
theme_override_font_sizes/font_size = 64
text = "Name
"
horizontal_alignment = 1

[node name="label_description" type="Label" parent="."]
texture_filter = 3
layout_mode = 0
offset_left = 16.0
offset_top = 108.0
offset_right = 664.0
offset_bottom = 192.0
theme_override_fonts/font = ExtResource("3_7ni2l")
theme_override_font_sizes/font_size = 32
text = "Description of Item"
autowrap_mode = 3

[node name="label_level" type="Label" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = 12.0
offset_right = 680.0
offset_bottom = 104.0
theme_override_fonts/font = ExtResource("3_7ni2l")
theme_override_font_sizes/font_size = 48
text = "Level: 1"

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 720.0
offset_bottom = 200.0

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
